    [package]
    name = "ros2-tauri"
    version = "0.0.0"
    description = "A Tauri App"
    authors = ["you"]
    license = ""
    repository = ""
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

    # We use a custom profile to keep colcon
    # separate from "normal" rust building.
    [profile.colcon]
    inherits = "release"

    [build-dependencies]
    tauri-build = { version = "1.5", features = [] }

    [dependencies]
    tauri = { version = "1.5", features = ["shell-open"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    r2r = "0.8.2"
    futures = "0.3.15"
    tokio = { version = "1", features = ["full"] }

    [features]
    # this feature is used for production builds or when `devPath` points to the filesystem
    # DO NOT REMOVE!!
    custom-protocol = ["tauri/custom-protocol"]
